--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,12 @@ body {
     padding-top: 30px;
   }
 
+  .column5 h1 {
+    font-family: 'Francois One', sans-serif;
+    font-size: 50px;
+    color: goldenrod;
+  }
+
   .column5 h2 {
     font-family: 'Francois One', sans-serif;
     color: goldenrod;
@@ -241,52 +247,7 @@ body {
     border-width: 4px;
     border: saddlebrown;
   }
-
-  /* Style inputs */
-  .regform1 input[type=text], select {
-    font-family: 'Patrick Hand', cursive;
-    font-size: larger;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  .regform1 input[type=email], select {
-    font-family: 'Patrick Hand', cursive;
-    font-size: larger;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
   
-
-  .regform1 input[type=password], select {
-    font-family: 'Patrick Hand', cursive;
-    font-size: larger;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  #shiptobilling {
-    font-family: 'Francois One', sans-serif;
-    font-size: larger;
-    width: 100%;
-    padding: 12px 20px;
-    display: inline-block;
-  }
 
   .feat {
     font-family: 'Francois One', sans-serif;
@@ -300,201 +261,3 @@ body {
     color: goldenrod;
   }
   
-  /* Style the submit button */
-  .regform1 input[type=submit] {
-    font-size: larger;
-    font-family: 'Francois One', sans-serif;
-    width: 100%;
-    background-color: goldenrod;
-    color: black;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  .regform1 input[type=reset] {
-    font-size: larger;
-    font-family: 'Francois One', sans-serif;
-    width: 100%;
-    background-color: goldenrod;
-    color: black;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* Add a background color to the submit button on mouse-over */
-  .regform1 input[type=submit]:hover {
-    background-color: gold;
-  }
-
-  .regform1 input[type=reset]:hover {
-    background-color: gold;
-  }
-
-  .regform1 textarea {
-    font-family: 'Patrick Hand', cursive;
-    font-size: larger;
-    width: 100%
-  }
-
-  /* Customize the label (the container) */
-  .container1 {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.container1 input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-}
-
-/* On mouse-over, add a grey background color */
-.container1:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container1 input:checked ~ .checkmark {
-  background-color: goldenrod;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.container1 input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid black;
-  border-width: 0 4px 4px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-/* The container */
-.container2 {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.container2 input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.container2:hover input ~ .checkmark2 {
-  background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.container2 input:checked ~ .checkmark2 {
-  background-color: goldenrod;
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark2:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.container2 input:checked ~ .checkmark2:after {
-  display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.container2 .checkmark2:after {
- 	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: black;
-}
-
-.regform1 label {
-  font-size: x-large;
-  font-family: 'Francois One', sans-serif;
-}
-
-/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
-.icon-bar {
-  position: fixed;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-/* Style the icon bar links */
-.icon-bar a {
-  display: block;
-  text-align: center;
-  padding: 16px;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 20px;
-}
-
